<resources>
    <string name="app_name">Feelings</string>

    <string name="text_message">How are you feeling?</string>
    <string name="mood_button">Karma</string>
    <string name="feeling"></string>
    <string name="name_textView">Name</string>
    <string name="name_edit">Name</string>

    <string name="toggle_on">positive</string>
    <string name="toggle_off">negative</string>

    <string name="yoga_text">Yoga</string>
    <string name="yoga1_radio">Yin</string>
    <string name="yoga2_radio">Bikram</string>
    <string name="yoga3_radio">Hatha</string>

    <string name="enlightened_check">enlightened</string>
    <string name="conservative_check">conservative</string>
    <string name="sarcastic_check">sarcastic</string>
    <string name="secretive_check">secretive</string>

    <string name="meditate_switch">Meditate</string>

    <string name="mood_image">Mood Image</string>

    <string-array name="moods">
        <item>happy</item>
        <item>sad</item>
        <item>lost</item>
        <item>angry</item>
    </string-array>


</resources>
